fix hover and focus, wrap change to direction

--- a/css/main.css
+++ b/css/main.css
@@ -438,15 +438,14 @@ img {
 .projects-item {
   background-color: var(--white-bcg-color);
 }
-.projects-item:hover{
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
+
 .projects-link{
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
 }
 
-.projects-link:focus{
+.projects-link:focus,
+.projects-link:hover{
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
